--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: "3.7"
+version: "3.9"
 services:
   database:
-    image: postgres
-    restart: always
-    env_file:
-      - .env
+    image: postgres:13.3
+    environment:
+      POSTGRES_DB: "server"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "123456"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - ../2. Init Database:/docker-entrypoint-initdb.d
+      - .:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    volumes:
-      - data:/var/lib/postgresql/data
   server:
     build:
       context: .
